Don't collapse whitespace in variables viewer Fix #8693

--- a/src/webviews/webview-side/interactive-common/variableExplorerCellFormatter.css
+++ b/src/webviews/webview-side/interactive-common/variableExplorerCellFormatter.css
@@ -7,6 +7,7 @@
 }
 
 .react-grid-variable-explorer-cell-string {
+    white-space: pre;
     color: var(--vscode-editor-foreground);
 }
 
